Changes in project