@@ -3,12 +3,12 @@ import java.util.Locale;
 /*
 This class contains the subtitles of videos that can be used by PremiumVideos.
  */
-public class Subtitles extends PremiumVideos {
-    private Locale language;
-    private String url;
+public class Subtitles  {
+    private final Locale language;
+    private final String url;
 
     public Subtitles (String language, String url){
-        this.language = new Locale(language);
+        this.language =  Locale.of(language);
         this.url = url;
     }
 
